@@ -12,13 +12,14 @@ release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 
-[RemovePrereqs]
-remove = strict
-remove = warnings
-remove = base
+[Author::Plicease::Core]
 
 ;[Prereqs]
 ;Foo::Bar = 0
+
+[Prereqs / ConfigurePrereqs]
+-phase = configure
+File::Which = 0
 
 [Author::Plicease::Upload]
 cpan = 1
